src/objects/Daily_PayPal_Transaction_Cancelled__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <label>Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Status__c</fullName>
        <label>Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Contact_Name__c</fullName>
        <label>Sold To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Daily PayPal Transaction (Cancelled)</label>
    <nameField>
        <label>Daily PayPal Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily PayPal Transactions (Cancelled)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>